added the client

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,8 @@ install_requires =
   python-jose
   passlib[bcrypt]
   python-multipart
-
+  pandas
+  requests
 
 [options.extras_require]
 dev = 
