--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ description = restful api for rdp
 version = 1.0.0
 url = https://github.com
 keywords = logging
+	faker
         pytest
         file
         parser
