--- a/setup.cfg
+++ b/setup.cfg
@@ -50,8 +50,9 @@ dev =
 
 [flake8]
 max-line-length=99
-exclude = venv
+exclude = venv, build, .git
 docstring-convention = numpy
+dictionaries = en_US,python,technical
 
 [isort]
 profile = black
